# age-engine

./: .gitignore  CMakeLists.txt  CursesContextManager.cpp  CursesContextManager.h  CursesRenderer.cpp  CursesRenderer.h  Doxyfile  main.cpp
assets/: default_border.txt  example_bitmap.txt  game_over.txt  game_start.txt  progress_cycle_1.txt  progress_cycle_2.txt  progress_cycle_3.txt
docs/: AsciiRenderProp_8h.html  AsciiRenderProp_8h__dep__incl.map  AsciiRenderProp_8h__dep__incl.md5  AsciiRenderProp_8h__incl.md5  AsciiRender_8cpp.html  AsciiRender_8cpp__incl.map  AsciiRender_8cpp__incl.md5  AsciiRender_8h.html  AsciiRender_8h__dep__incl.map  AsciiRender_8h__dep__incl.md5  AsciiRender_8h__incl.map  AsciiRender_8h__incl.md5  AsciiRender_8h_source.html  AsciiRenderer_8cpp__incl.map  AsciiRenderer_8cpp__incl.md5  AsciiRenderer_8h.html  AsciiRenderer_8h__dep__incl.map  AsciiRenderer_8h__dep__incl.md5  AsciiRenderer_8h_source.html  BasicCollision_8cpp.html  BasicCollision_8cpp__incl.map  BasicCollision_8cpp__incl.md5  BasicCollision_8h.html  BasicCollision_8h__dep__incl.map  BasicCollision_8h__incl.map  BasicCollision_8h__incl.md5  BasicCollision_8h_source.html  BasicPlayerMovement_8h.html  BasicPlayerMovement_8h__dep__incl.map  BasicPlayerMovement_8h__dep__incl.md5  BasicPlayerMovement_8h__incl.map  BasicPlayerMovement_8h__incl.md5  BasicPlayerMovement_8h_source.html  BitMapLoader_8cpp__incl.map  BitMapLoader_8h.html  BitMapLoader_8h__dep__incl.map  BitMapLoader_8h__dep__incl.md5  BitMapLoader_8h_source.html  BitMapProp_8h.html  BitMapProp_8h__dep__incl.map  (+764 more)
docs/html/: AsciiRenderProp_8h.html  AsciiRenderProp_8h__dep__incl.map  AsciiRenderProp_8h__dep__incl.md5  AsciiRenderProp_8h__incl.map  AsciiRenderProp_8h_source.html  AsciiRender_8cpp.html  AsciiRender_8h__dep__incl.map  AsciiRender_8h__incl.map  AsciiRender_8h__incl.md5  AsciiRenderer_8cpp.html  AsciiRenderer_8h__dep__incl.map  AsciiRenderer_8h__incl.map  AsciiRenderer_8h__incl.md5  BasicCollision_8cpp.html  BasicCollision_8cpp__incl.md5  BasicCollision_8h__dep__incl.md5  BitMapLoader_8cpp.html  BitMapLoader_8cpp__incl.md5  BitMapLoader_8h__dep__incl.md5  BitMapLoader_8h__incl.map  BitMapLoader_8h__incl.md5  BitMapProp_8h.html  BitMapProp_8h__dep__incl.map  BitMapProp_8h__dep__incl.md5  BitMapProp_8h__incl.map  CMakeLists_8txt.html  CharacterProp_8h__dep__incl.map  CharacterProp_8h__incl.md5  CharacterProp_8h_source.html  ComponentManager_8h.html  ComponentManager_8h__dep__incl.map  ComponentManager_8h__dep__incl.md5  ComponentManager_8h__incl.map  ComponentManager_8h__incl.md5  CursesContextManager_8cpp__incl.map  CursesContextManager_8cpp__incl.md5  CursesContextManager_8h__dep__incl.map  CursesContextManager_8h__dep__incl.md5  CursesContextManager_8h__incl.md5  CursesKeyboard_8cpp.html  (+431 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_16.js  all_19.js  all_3.js  all_4.js  all_6.js  all_8.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_10.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  defines_0.js  defines_1.js  defines_10.js  defines_12.js  defines_4.js  defines_5.js  defines_6.js  defines_9.js  defines_e.js  defines_f.js  enums_0.js  enumvalues_0.js  (+45 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+112 more)
engine/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  age.h
engine/components/: AsciiRender.cpp  AsciiRender.h  BasicCollision.cpp  BasicCollision.h  BasicPlayerMovement.h  CMakeLists.txt  EngineComponents.h  EngineSystems.h  EntityTag.cpp  EntityTag.h  None.h  Physics.cpp  Physics.h  Transform.h
engine/data/: utils.h  vec2.h  vec3.h
engine/ecs/: CMakeLists.txt  Component.cpp  Component.h  ComponentManager.h  Entity.cpp  Entity.h  EntityManager.h  Registry.h  System.h  SystemManager.h  ecs.h
engine/ecs/impl/: BasicRegistry.h  Component.h  Entity.h  Registry.h  System.h
engine/entry/: EntryPoint.cpp  EntryPoint.h
engine/events/: CMakeLists.txt  Event.cpp  Event.h
engine/events/EngineEvents/: EngineEvents.h
engine/events/engine_events/: EngineEvent.h
engine/ncurses/: CMakeLists.txt  CursesContextManager.cpp  CursesContextManager.h  CursesKeyboard.cpp  CursesKeyboard.h  CursesRenderAdapter.cpp  CursesRenderAdapter.h  CursesRenderer.cpp  CursesRenderer.h  curseswrapper.h
engine/renderer/: AsciiRenderer.cpp  AsciiRenderer.h  CMakeLists.txt  RenderTarget.h  Renderer.cpp  Renderer.h  ScreenBuffer.cpp  ScreenBuffer.h
engine/renderer/RenderComponents/: AsciiRenderProp.h  BitMapProp.h  CharacterProp.h  CyclicRenderProp.h  IAsciiRenderProp.h  RectProp.h  TextProp.h
engine/renderer/RenderComponents/impl/: BitMapProp.h  CharacterProp.h  RectProp.h
engine/utils/: BitMapLoader.cpp  BitMapLoader.h  vec2.h  vec3.h
examples/FeatureDemo/: CMakeLists.txt  FeatureDemo.cpp  FeatureDemo.h  main.cpp
examples/FeatureDemo/components/: Movement.cpp  Movement.h
examples/FeatureDemo/scenes/: IntroScene.cpp  IntroScene.h  MovementScene.cpp  MovementScene.h
examples/SpaceInvader/: CMakeLists.txt  SpaceInvader.cpp  SpaceInvader.h  main.cpp
examples/SpaceInvader/components/: Health.h  MeteorSpawn.cpp  MeteorSpawn.h  OutOfBound.cpp  OutOfBound.h  Physics.cpp  Physics.h  Player.cpp  Player.h  PlayerScore.cpp  PlayerScore.h  SpaceInvaderComponentSystem.h  Velocity.h
examples/SpaceInvader/events/: MeteorPastBorder.h  ScoreEvent.h
examples/SpaceInvader/scenes/: GameOverScene.cpp  GameOverScene.h  GameStartScene.cpp  GameStartScene.h  MainScene.cpp  MainScene.h
lib/: ncurses.h
